Made updates to templates and placeholder images

--- a/templates/3pg.html
+++ b/templates/3pg.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Urbanization</title>
+    <title>Catapult App</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -30,43 +30,26 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <span class="navbar-brand glyphicon glyphicon-equalizer" href="#"></span>
-          <a class="navbar-brand" href="/">(SUB)URBAN NEWS</a>
+          <span class="navbar-brand glyphicon glyphicon-scale" href="#"></span>
+          <a class="navbar-brand" href="/">CATAPULT DATA ANALYSIS: Wearable Technology</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <!-- <ul class="nav navbar-nav">
-            <li><a href="/employment">EMPLOYMENT DATA SOURCE</a></li>
-            <li><a href="/population">POPULATION DATA SOURCE</a></li>   
-          </ul> -->
 
-          <ul class="nav navbar-nav navbar-right">
-            
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">API Endpoints<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="/population_urban" target="_blank">Population Urban</a></li>
-                <li><a href="/population_suburban" target="_blank">Population Suburban</a></li>
-                <li><a href="/population_total" target="_blank">Population Total</a></li>
-                <li><a href="/employment_urban" target="_blank">Employment Urban</a></li>
-                <li><a href="/employment_suburban" target="_blank">Employment Suburban</a></li>
-                <li><a href="/employment_total" target="_blank">Employment Total</a></li>
-              </ul>
-            </li>
-          </ul>
-
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PLOTS<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="/fig1">Urbanization Trends</a></li>
-                <li><a href="/fig2">Employment Stats</a></li>
-                <li><a href="/fig3">Population Growth</a></li>
+                <li><a href="/1">Wearable Technology: Player Load Data</a></li>
+                <li><a href="/2">Acute vs Chronic</a></li>
+                <li><a href="/3">Wins & Loses</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="http://hdr.undp.org/en/content/income-gini-coefficient" target="_blank">Income Gini Coefficient</a></li>
-                <li><a href="https://www.nytimes.com/interactive/2015/05/03/upshot/the-best-and-worst-places-to-grow-up-how-your-area-compares.html" target="_blank">NYTimes D3: Best & Worst Places To Grow Up</a></li>
+                <li><a href="#" target="_blank">NCAA Northwestern Team</a></li>
+                <li><a href="#" target="_blank">Considerations</a></li>
               </ul>
             </li>
           </ul>
