--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <span class="navbar-brand glyphicon glyphicon-equalizer" href="#"></span>
+            <span class="navbar-brand glyphicon glyphicon-signal" href="#"></span>
             <a class="navbar-brand" href="/">CATAPULT DATA ANALYSIS: Wearable Technology</a>
         </div>
 
@@ -65,48 +65,26 @@
     </nav>
 <!-- Navigation End -->
 <!-- HighChartsJS demo -->
-
-<div class="container">
-  <div class="row">
-  <h3>OVERVIEW: An Interactive Comparison Data Report</h3>
-    <h4>Is Urbanization On The Decline?</h4>
-    <p>Utilizing <a href="/fig1">LeafletJS</a> and <a href="/fig2">HighChartJS</a> charting libraries, our team aimed to investigate whether or not Urban areas are growing at a faster pace than their Suburban counterparts. In addition to this, we wanted to look deeper into a potential cause of these trends and used employment data from the Bureau of Labor Statistics to inform our analysis further.</p>
-    <p>Based on our analysis, we discovered the following: </p>
-    <ul>
-        <li>In most cases, suburban population and employment growth outperformed urban population growth. The latter, being a potential driver of Suburban sprawl.</li>
-        <li>In addition to this, high growth areas were consolidated primary among the coast and sunbelt. Perhaps an indication that weather and immigration play a role.</li>
-      </ul>
-      <p>Though it requires deeper research, it does appear that Suburban areas are growing at a faster pace than their Urban counterparts and that a potential driver of this is employment growth. </p>
-  </div>
-</div>
-
-<div class="container">
-<div class="row">
-  <div class="col-md-12">
-      <iframe width="900" height="800" frameborder="0" scrolling="no" src="//plot.ly/~dhoebbel/29.embed"></iframe>
-  </div>
-</div>
-</div>
-
 <div class="container">
   <div class="row">
   <h3>Three Key Analysis Points</h3>
   </div>
-<br>
-<!-- ACCORDION -->
+
+  <br>
+  <!-- ACCORDION -->
   <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
-<!-- PANEL -->
+  <!-- PANEL -->
   <div class="panel panel-default documents" style="display: block;">
     <div class="panel-heading" role="tab">
-      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#panel0">1. Urbanization Trends (HighChartsJS: Scatter Plot)</a></h4>
+      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#panel0">1. Acute vs Chronic Data Loads</a></h4>
     </div>
     <div id="panel0" class="panel-collapse collapse" role="tabpanel">
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-12" style="padding-top:20px;">  
-            <a href="/fig1"><img src="../static/images/1accordion.png" alt="fig1-overview"/></a>
-            <h5>* Click image to see interactive HighChart</h5>
+            <a href="/1"><img src="../static/images/1accordion.png" alt="fig1-overview"/></a>
+            <h5>* Click image to see interactive chart</h5>
           </div>
         </div>
       </div>
@@ -116,13 +94,13 @@
   <!-- PANEL -->
   <div class="panel panel-default documents" style="display: block;">
     <div class="panel-heading" role="tab">
-      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#panel1">2. Employment Stats (PlotlyJS: Bar, Heat Map, Bubble Plot)</a></h4>
+      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#panel1">2. Injury Data Analysis</a></h4>
     </div>
     <div id="panel1" class="panel-collapse collapse" role="tabpanel">
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-12">
-            <a href="/fig2"><img src="../static/images/2accordion.png"></a>
+            <a href="/2"><img src="../static/images/2accordion.png"></a>
             <h5>* Click image to see interactive Plotly charts.</h5>
           </div>
         </div>
@@ -133,13 +111,13 @@
   <!-- PANEL -->
   <div class="panel panel-default documents" style="display: block;">
     <div class="panel-heading" role="tab">
-      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#panel2">3. Population Growth (PlotlyJS: Bar, Heat Map, Bubble Plot)</a></h4>
+      <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#panel2">3. Off Season | On Season | Sleep Patterns</a></h4>
     </div>
     <div id="panel2" class="panel-collapse collapse" role="tabpanel">
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-12" style="padding-top:20px;">  
-            <a href="/fig3"><img src="../static/images/fig3-populate.png" alt="fig3-overview"/></a>
+            <a href="/3"><img src="../static/images/fig3-populate.png" alt="fig3-overview"/></a>
             <h5>* Click image to see interactive Plotly charts.</h5>
           </div>
         </div>
@@ -147,10 +125,34 @@
     </div>
   </div>
 
+  </div>
 </div>
 
 <br>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h3>OVERVIEW: An Interactive Comparison Data Report</h3>
+      <p>Lorem apps <a href="#">Link 1</a> and <a href="#">Link 2</a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus mauris ipsum, suscipit ac tortor a, commodo ultricies nulla. Curabitur vitae dui vel erat lobortis efficitur. Morbi et justo tincidunt, lobortis justo id, bibendum ipsum. Nam ut nisi in turpis imperdiet placerat. Morbi interdum aliquam urna fringilla ultrices. Aenean sed felis vitae ex tempus interdum. Sed aliquet augue elit, eu vulputate dui volutpat nec. Vestibulum elit urna, tincidunt sed efficitur at, maximus ut ante. Etiam semper sodales leo in dignissim. Nam vehicula volutpat nibh ac aliquet. Proin semper auctor justo, sit amet auctor velit tempus eget. Fusce hendrerit suscipit suscipit. Etiam sagittis mattis enim quis luctus..</p>
+    <hr>
+      <iframe width="900" height="800" frameborder="0" scrolling="no" src="//plot.ly/~dhoebbel/29.embed"></iframe>
+    </div>
+  </div>
+</div>
+
+<hr>
+
+<div class="container">
+  <div class="row">
+  <h4>Data Loads Comparisons, Trends & Curve Balls</h4>
+    <p>Nullam fermentum lorem urna, eget congue sem maximus at: </p>
+      <ul>
+        <li>Names</li>
+        <li>Names</li>
+      </ul>
+    <p>Replace with faker names</p>
+  </div>
 </div>
 
 <!-- HighCharts JS -->
