Updated seadog footer image

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,8 @@
 
   </head>
 
-  <body>
+<body>
+  <div class="content">
 <!-- Navigation Start -->
     <nav class="navbar navbar-default static-top">
       <div class="container-fluid">
@@ -147,14 +148,11 @@
   <div class="row">
   <h4>Data Loads Comparisons, Trends & Curve Balls</h4>
     <p>Nullam fermentum lorem urna, eget congue sem maximus at: </p>
-      <ul>
-        <li>Names</li>
-        <li>Names</li>
-      </ul>
-    <p>Replace with faker names</p>
+    <p>Replace player names with fake ones</p>
   </div>
 </div>
 
+<br>
 <!-- HighCharts JS -->
     <script src="../static/js/highcharts.js"></script>
 
@@ -162,5 +160,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/bootstrap.min.js"></script>
-  </body>
+
+  <footer class="footer">
+    <img src="../static/images/seadog_footer.png" alt="footer-dog"/>
+  </footer>
+
+  </div>
+</body>
+
+  
 </html>
