--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,3 +2,11 @@ tr.header-row {
   font-weight: 600;
   text-transform: uppercase;
 }
+
+.content {
+  min-height: calc(100vh - 70px);
+}
+.footer {
+  background-color: #009094;
+  height: 50px;
+}
