--- a/templates/1pg.html
+++ b/templates/1pg.html
@@ -72,6 +72,7 @@
     </div>
 </div>
 
+<br>
 <!-- HighChart JS test -->
 <script>
   
@@ -256,5 +257,10 @@ Highcharts.chart('container', {
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/bootstrap.min.js"></script>
+
+  <footer class="footer">
+    <img src="../static/images/seadog_footer.png" alt="footer-dog"/>
+  </footer>
+
   </body>
 </html>
