--- a/templates/2pg.html
+++ b/templates/2pg.html
@@ -101,10 +101,16 @@
     
 </div>
 
+<br>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/bootstrap.min.js"></script>
     <script src="../static/js/app.js"></script>
+
+  <footer class="footer">
+    <img src="../static/images/seadog_footer.png" alt="footer-dog"/>
+  </footer>
+
   </body>
 </html>
