fixed page 2, routes

--- a/templates/2pg.html
+++ b/templates/2pg.html
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
           </button>
           <span class="navbar-brand glyphicon glyphicon-scale" href="#"></span>
-          <a class="navbar-brand" href="#">CATAPULT DATA ANALYSIS: Wearable Technology</a>
+          <a class="navbar-brand" href="/">CATAPULT DATA ANALYSIS: Wearable Technology</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
