Include Science For Sports link to all dropdowns

--- a/templates/1pg.html
+++ b/templates/1pg.html
@@ -50,7 +50,7 @@
                 <li><a href="/2">Acute vs Chronic</a></li>
                 <li><a href="/3">Wins & Loses</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#" target="_blank">NCAA Northwestern Team</a></li>
+                <li><a href="https://www.scienceforsport.com/acutechronic-workload-ratio/#av_section_2" target="_blank">Science For Sports</a></li>
                 <li><a href="#" target="_blank">Considerations</a></li>
               </ul>
             </li>
