added explanation paragraph

--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@
   <div class="row">
     <div class="col-md-12">
       <h3>OVERVIEW: An Interactive Comparison Data Report</h3>
-      <p>Lorem apps <a href="#">Link 1</a> and <a href="#">Link 2</a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus mauris ipsum, suscipit ac tortor a, commodo ultricies nulla. Curabitur vitae dui vel erat lobortis efficitur. Morbi et justo tincidunt, lobortis justo id, bibendum ipsum. Nam ut nisi in turpis imperdiet placerat. Morbi interdum aliquam urna fringilla ultrices. Aenean sed felis vitae ex tempus interdum. Sed aliquet augue elit, eu vulputate dui volutpat nec. Vestibulum elit urna, tincidunt sed efficitur at, maximus ut ante. Etiam semper sodales leo in dignissim. Nam vehicula volutpat nibh ac aliquet. Proin semper auctor justo, sit amet auctor velit tempus eget. Fusce hendrerit suscipit suscipit. Etiam sagittis mattis enim quis luctus..</p>
+      <p>Lorem apps <a href="#">Link 1</a> and <a href="#">Link 2</a>The goal of this project was to compare basketball outcomes data (games stats & injury data) to captured athlete monitoring data and evaluate for trends. Data was compiled from the Catapult Sport API, team game statistics, and injury data from one NCAA Division I team. Data exploration was completed in Python Pandas with data visualization in Tableau and machine learning in Sci-Kit Learn. The graphs and data below show our exploration and analysis.</p>
     <hr>
       <iframe width="900" height="800" frameborder="0" scrolling="no" src="//plot.ly/~dhoebbel/29.embed"></iframe>
     </div>
