Added github repo code/project board link for reference

--- a/templates/2pg.html
+++ b/templates/2pg.html
@@ -48,6 +48,7 @@
                 <li role="separator" class="divider"></li>
                 <li><a href="https://www.scienceforsport.com/acutechronic-workload-ratio/#av_section_2" target="_blank">Science For Sports</a></li>
                 <li><a href="#" target="_blank">Considerations</a></li>
+                <li><a href="https://github.com/risatino/seadogz" target="_blank">Github Code + Project Board</a></li>
               </ul>
             </li>
           </ul>
