remove old images from last project

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,8 @@
       <h3>OVERVIEW: An Interactive Comparison Data Report</h3>
       <p>The goal of this project was to compare basketball outcomes data (games stats & injury data) to captured athlete monitoring data and evaluate for trends. Data was compiled from the <a href="https://www.catapultsports.com/" target="_blank">Catapult Sport</a> API, team game statistics, and injury data from one NCAA Division I team. Data exploration was completed in Python Pandas with data visualization in Tableau and machine learning in Sci-Kit Learn. The graphs and data below show our exploration and analysis.</p>
     <hr>
-      <iframe width="1000" height="500" frameborder="0" scrolling="no" src=""></iframe>
+      <img src="../static/images/sd_datafetch.jpg" alt="figure1"/>
+      <!-- <iframe width="1000" height="500" frameborder="0" scrolling="no" src=""></iframe> -->
     </div>
   </div>
 </div>
@@ -102,7 +103,7 @@
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-12" style="padding-top:20px;">  
-            <a href="/1"><img src="../static/images/sd_datafetch.png" alt="figure1"/></a>
+            <a href="/1"><img src="../static/images/seadog_only.png" alt="figure1"/></a>
             <h5>* Click image to see interactive chart Tableau analysis</h5>
           </div>
         </div>
@@ -119,7 +120,7 @@
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-12">
-            <a href="/2"><img src="../static/images/sd_datafetch.png" alt="figure2"></a>
+            <a href="/2"><img src="../static/images/seadog_only.png" alt="figure2"></a>
             <h5>* Click image to see interactive Tableau analysis.</h5>
           </div>
         </div>
@@ -136,7 +137,7 @@
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-12" style="padding-top:20px;">  
-            <a href="/3"><img src="../static/images/sd_datafetch.png" alt="figure3"/></a>
+            <a href="/3"><img src="../static/images/seadog_only.png" alt="figure3"/></a>
             <h5>* Click image to see interactive Tableau analysis.</h5>
           </div>
         </div>
