--- a/templates/index.html
+++ b/templates/index.html
@@ -79,6 +79,8 @@
       <!-- <img src="../static/images/sd_datafetch.jpg" alt="figure1"/> -->
       <!-- <iframe width="1000" height="500" frameborder="0" scrolling="no" src=""></iframe> -->
     </div>
+    <hr>
+    <p>Graph Analysis - NK ENTER!</p>
   </div>
 </div>
 
