--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
           <ul class="nav navbar-nav navbar-right">
             
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PLOTS<span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">RESOURCES<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#" target="_blank">Wearable Technology: Player Load Data</a></li>
                 <li><a href="#" target="_blank">Acute vs Chronic</a></li>
