--- a/templates/index.html
+++ b/templates/index.html
@@ -52,10 +52,10 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">RESOURCES<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#" target="_blank">Wearable Technology: Player Load Data</a></li>
-                <li><a href="#" target="_blank">Acute vs Chronic</a></li>
-                <li><a href="#" target="_blank">Wins & Loses</a></li>
-                <li><a href="#" target="_blank">Considerations</a></li>
+                <li><a href="#" target="_blank">Outcome Data</a></li>
+                <li><a href="#" target="_blank">Resource PDF 1</a></li>
+                <li><a href="#" target="_blank">Resource PDF 2</a></li>
+
                 <li role="separator" class="divider"></li>
                 <li><a href="https://www.scienceforsport.com/acutechronic-workload-ratio/#av_section_2" target="_blank">Science For Sports</a></li>
                 <li><a href="https://github.com/risatino/seadogz" target="_blank">Github Code + Project Board</a></li>
