updates to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
           </button>
             <span class="navbar-brand glyphicon glyphicon-signal" href="#"></span>
-            <a class="navbar-brand" href="/">CATAPULT DATA ANALYSIS: Wearable Technology</a>
+            <a class="navbar-brand" href="/">CATAPULT DATA ANALYSIS: Athlete Monitoring</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -115,7 +115,7 @@
             <hr>
             <h5>* Click interactive Tableau analysis.</h5>
             <br>
-            <p>Lorem paragraph...</p>
+            <p>This visualization takes the Catapult Sports determined acute to chronic ratio (team average) and tracks in the team injury data. While acute to chronic ratio is most applicable to overuse injuries, this graph takes into account with overuse and acute injuries.  Overuse injury tends to follow, within a month) a acute:chronic spike above 1.5.</p>
           </div>
 
         </div>
@@ -137,7 +137,6 @@
             <div class='tableauPlaceholder' style='width: 1050px; height: 600px;'><object class='tableauViz' width='1050' height='600' style='display:none;'><param name='host_url' value='https%3A%2F%2Fus-east-1.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;seadogs' /><param name='name' value='acute_chronic_ratio_injuries&#47;total_inj_vs_total_ratio' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /><param name='filter' value='iframeSizedToWindow=true' /></object></div>
             <hr>
             <!-- <a href="/1"><img src="../static/images/seadog_only.png" alt="figure1"/></a> -->
-            <h5>* Click interactive chart Tableau analysis.</h5>
           </div>
           
         </div>
