--- a/templates/index.html
+++ b/templates/index.html
@@ -52,9 +52,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">RESOURCES<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#" target="_blank">Outcome Data</a></li>
-                <li><a href="#" target="_blank">Acute:Chronic Workload, Hulin, 2016 (PDF)</a></li>
-                <li><a href="#" target="_blank">Acute Workload & Injury, Hulin, 2013 (PDF)</a></li>
+                <!-- <li><a href="#" target="_blank">Outcome Data</a></li> -->
+                <li><a href="https://drive.google.com/file/d/1oROgroM4cWew1j-pdiH5w9RAm2fkNgre/view?usp=sharing" target="_blank">Acute:Chronic Workload, Hulin, 2016 (PDF)</a></li>
+                <li><a href="https://drive.google.com/file/d/13Gq_WmkdgZ9Ce4SKWMkD6zm4e62s9QdC/view?usp=sharing" target="_blank">Acute Workload & Injury, Hulin, 2013 (PDF)</a></li>
 
                 <li role="separator" class="divider"></li>
                 <li><a href="https://www.youtube.com/user/CatapultSports/videos" target="_blank">Catapult Sports Videos</a></li>
